fix copy, styling on mobile when text box is over the image

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -141,31 +141,31 @@ slideshow-component {
 }
 
 @media screen and (max-width: 749px) {
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls {
     background-color: rgb(var(--color-base-background-1));
     color: rgba(var(--color-base-text), 0.75);
   }
 
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-button,
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--active.slider-counter__link--numbers,
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--numbers {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-button,
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--active.slider-counter__link--numbers,
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--numbers {
     color: rgba(var(--color-base-text), 0.75);
   }
 
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls > .slider-button:not([disabled]):hover,
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--numbers:hover {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls > .slider-button:not([disabled]):hover,
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--numbers:hover {
     color: rgb(var(--color-base-text));
   }
 
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--dots .dot {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--dots .dot {
     border: 0.1rem solid rgba(var(--color-base-text), 0.5);
   }
 
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--active.slider-counter__link--dots .dot {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--active.slider-counter__link--dots .dot {
     background-color: rgb(var(--color-base-text));
   }
 
-  .slideshow:not(.banner--mobile-bottom) .slideshow__controls .slider-counter__link--dots:not(.slider-counter__link--active):hover .dot {
+  .slideshow:not(.banner--mobile-bottom) + .slideshow__controls .slider-counter__link--dots:not(.slider-counter__link--active):hover .dot {
     border-color: rgb(var(--color-base-text));
   }
 }
@@ -250,8 +250,11 @@ slideshow-component:not(.page-width) .slider-buttons {
   transition: transform 150ms ease, opacity 150ms ease;
 }
 
-.play path, .pause path {
-  fill: rgba(var(--color-foreground), 0.75);
+@media screen and (max-width: 749px) {
+  .slideshow.banner--mobile-bottom + .slideshow__controls .play path,
+  .slideshow.banner--mobile-bottom + .slideshow__controls .pause path {
+    fill: rgba(var(--color-foreground), 0.75);
+  }
 }
 
 @media screen and (min-width: 750px) {
